# anchor_program_tutorial

./: .env  .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
doc/: anchor_program_cmd.MD  install_tools.MD  solana_cmd.MD
programs/anchor_demo/: Cargo.toml
programs/anchor_demo/src/: constants.rs  error.rs  event.rs  lib.rs  macros.rs
programs/anchor_demo/src/adapters/: common.rs  mod.rs  raydium.rs
programs/anchor_demo/src/instructions/: check_identity.rs  commission_proxy_swap.rs  common.rs  handle_account_types.rs  handle_data.rs  handle_data_size.rs  handle_multiple_signers.rs  handle_proxy_swap.rs  handle_reallocate_room.rs  handle_spl_token.rs  handle_transfer_fee.rs  initialize.rs  mod.rs  optional_accounts.rs
programs/anchor_demo/src/libraries/: big_num.rs
programs/anchor_demo/src/math/: mod.rs  safe_unwrap.rs
programs/anchor_demo/src/states/: auth_store.rs  common.rs  mod.rs  signed_msg_user.rs  user.rs
programs/anchor_demo/src/utils/: bn.rs  casting.rs  ceil_div.rs  floor_div.rs  mod.rs  safe_math.rs  token.rs
programs/anchor_demo_test/: Cargo.toml
programs/anchor_demo_test/src/: lib.rs
tests/: anchor_demo_test.ts  idl_analyze.test.ts  pda.test.ts  pda_util.ts  utils.ts
tests/fetch_raydium_data/: config.ts  main.ts  raydium-swap.ts
tests/idl_analysis/: idl_authstore.test.ts
tests/jupiter_limit_order/: cancel_limit_order.ts  create_limit_order.ts  get_limit_orders.ts  main.ts
tests/token_utils/: get_transferfee_config.test.ts
