[package]
name = "anchor_demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_demo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
num_enum = ">=0.6.1, <=0.7.2"
anchor-lang = { version = "=0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.1"}
mpl-token-metadata = { version = "4.1.2" }
spl-token = "=4.0.0"
spl-math = { version = "0.2", features = ["no-entrypoint"] }
spl-memo = "=4.0.0"
uint = "0.9.1"
spl-associated-token-account = "=2.2.0"
solana-security-txt = "1.1.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] }
arrayref = { version = "0.3.6" }
ahash = { version = "0.8.6", default-features = false }
indexmap = "1.9.3"
spl-token-2022 = "=0.9.0"
solana-program = "=1.18.17"
proc-macro2 = "=1.0.94" 


chrono = "0.4"
num-traits = "0.2"

borsh = "0.10.3"